--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "prod": "node express-prod-server.js",
     "start": "node_modules/.bin/webpack-dev-server --host 0.0.0.0",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
@@ -14,6 +15,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ejs": "^2.5.8",
+    "express": "^4.16.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
