--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,9 @@ after_script:
 - "./node_modules/coveralls/bin/coveralls.js < ./test/unit/coverage/lcov.info"
 - docker-compose down --remove-orphans
 after_success:
-- docker login --username=_ --password=$(HEROKU_AUTHTAG) registry.heroku.com
+- docker login --username=_ --password="$(HEROKU_AUTHTAG)" registry.heroku.com
 - docker build -f Dockerfile.prod -t deploy_image .
+- echo "$(HEROKU_AUTHTAG)"
 - |
   if[ "${TRAVIS_BRANCH}" == "development"]; then 
     echo "Deploying to homolog environment..."  
