--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ after_script:
 - "./node_modules/coveralls/bin/coveralls.js < ./test/unit/coverage/lcov.info"
 - docker-compose down --remove-orphans
 after_success:
-- echo "$(HEROKU_AUTHTOKEN)"
-- docker login --username=_ --password="$(HEROKU_AUTHTOKEN)" registry.heroku.com
+- docker login --username=_ --password=$(HEROKU_AUTHTOKEN) registry.heroku.com
 - docker build -f Dockerfile.prod -t deploy_image .
 - |
   if[ "${TRAVIS_BRANCH}" == "development"]; then 
