--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,7 +3,9 @@ version: '2'
 services:
   th_bi-front:
     container_name: tropical-hazards-front
-    image: arthur0496/tropical-hazards-front:test
+    build:
+      dockerfile: Dockerfile.test
+      context: .
     command: /bin/bash -lc "npm install && npm run dev"
     volumes:
       - .:/TropicalHazards-BI-FrontEnd
