--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,6 +4,6 @@ RUN apt-get update && apt-get install bzip2
 
 WORKDIR /TropicalHazards-BI-FrontEnd
 
-COPY . /TropicalHazards-BI-FrontEnd
+ADD . /TropicalHazards-BI-FrontEnd
 
 COPY package.json /package.json
