--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,6 +1,6 @@
 FROM node:slim
 
-RUN apt-get update && apt-get install bzip2
+RUN apt-get update && apt-get install bzip2 libfontconfig
 
 WORKDIR /TropicalHazards-BI-FrontEnd
 
